--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
+    "html2canvas": "1.4.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "html2canvas": "1.4.1",
-    "@supabase/supabase-js": "^2.95.3"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
