--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
+    "date-fns": "^4.1.0",
     "html2canvas": "1.4.1",
+    "motion": "^12.34.3",
     "react": "^19.2.4",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.4",
     "recharts": "^3.7.0"
   },
